OpenAPI: records output
